# micro-services-dev

./: .gitignore  AGENTS.md  Bacera.Gateway.sln  Bacera.Gateway.sln.DotSettings  CLAUDE.md  Cargo.toml  README.md  azure-pipelines.yml  demo_data_ib_center.sql  package-lock.json  package.json  rebate_calculate.md  release_rebate.md
.github/workflows/: deploy-auth-staging.yml  deploy-boardcast-staging.yml  deploy-front-client-staging.yml  deploy-front-portal-product.yml  deploy-front-portal-staging.yml  deploy-front-tenant-staging.yml  deploy-idgen-staging.yml  deploy-mono-staging.yml  deploy-scheduler-staging.yml  deploy-tools-staging.yml  test-scheduler.yml
_doc/Report configuration/: bcr daily quity.json  nsy daily equity.json
_doc/email template/: confirm email.txt  layout.txt
_doc/migrations/: 00000000_TransferView.sql  00000000_seed_transition.sql  20230811_add_currency_id_to_payment_service.sql  20230816_add_currency_id_to_access_and_account.sql  20230821_add_hold_index_in_rebate_expend_payment_reference_number.sql  20230821_update_verification_item_finacial_fund_to_array.sql  20230822_withdraw_add_source_trade_account_id.sql  20230823_create_rebate_rule_template.sql  20230825_account_group.sql  20230828_new_user_role.sql  20230829_remove_uindex_on_referal_histtory.sql  20230829_rename_group_account_id.sql  20230831_add_action_and_transition.sql  20230831_add_rule_template_id_on_trade_account.sql  20230905_add_referral_code_on_demo_account.sql  20230906_rebuild_broker_agent_rebate_rule.sql  20230908_exten_exchange_rate.sql  20230911_exchange_rate_for_withdraw.sql  20230913_account_add_column_is_closed.sql  20230914_add_transation_fail_state.sql  20230920_remove_trade_transaction.sql  20230925_new_leads_tables.sql  20230926_rebuild_rebate_agent_rule.sql
_doc/sql/: Account Claims.sql  Fake rebate from Trade.sql  GenerateTransactionSummaryReport-DepositForAgent.sql  GenerateTransactionSummaryReport-Rebate.sql  GenerateTransactionSummaryReport-TradeVolume.sql  GenerateTransactionSummaryReport-TradeVolumeForAgent.sql  Import legacy documents to verification item.sql  TransferView-v2-with-wallet-transation.sql  functions.sql  get balance snapshot.sql  update timestamp with timezone.sql
app/web/: README.md
deployment/: README.md  docker-compose.local.yml
deployment/k8s/: README.md  auth-deployment.yaml  auth-service.yaml  boardcast-deployment.yaml  boardcast-service.yaml  fluent-bit.yaml  front-client-react.yaml  front-client.yaml  front-portal.yaml  front-tenant.yaml  gateway-ingress.yaml  grafana.yaml  idgen-deployment.yaml  idgen-service.yaml  ingress-nginx-deploy.yaml  loki.yaml  mono-deployment.yaml  mono-service.yaml  nats-deployment.yaml  nodegroup.yaml  nodepool.yaml  redis-deployment.yaml  scheduler-deployment.yaml  scheduler-service.yaml  storageclass.yaml  tools-deployment.yaml
deployment/k8s-prod/: front-portal-product.yaml  gateway-ingress.yaml  ingress-nginx-prod.yaml
deployment/migrations/: 01_openiddict_create_tables.sql  02_migrate_is4_clients_to_openiddict.sql  03_drop_is4_tables.sql  run_migration.sh  run_migration2.sh
docs/openapi/: index.html
proto/: README.md  buf.gen.yaml  buf.yaml
scripts/: compare_rebate.sh  generate_openapi.js  migrate_trade_rebate_new.sql  reset_rebate.sh  sync-remote-to-local.sh
services/auth/: Cargo.toml  Dockerfile  build.rs
services/auth/Db/: AuthDbContext.cs  DbQueries.cs
services/auth/Security/: HashIds.cs  PasswordVerifier.cs  TokenService.cs
services/auth/Services/: EmailService.cs  LoginSecurityService.cs  TenantDbContextFactory.cs
services/auth/src/: cookie.rs  db.rs  extractors.rs  hashids.rs  keys.rs  lib.rs  main.rs  party_uid.rs  password.rs  redis_store.rs  security.rs  serde_helpers.rs  state.rs  token.rs  totp.rs  twilio.rs
services/auth/src/grpc/: auth_client.rs  mod.rs  validate.rs
services/auth/src/routes/: auth.rs  mod.rs  password.rs  register.rs  twofa.rs
services/auth_old/: Bacera.Gateway.Auth.csproj  Cargo.toml  Dockerfile  Program.cs
services/auth_rust/: Cargo.toml  Dockerfile
services/auth_rust/src/: db.rs  hashids.rs  main.rs  token.rs
services/boardcast/: Cargo.toml  Dockerfile  build.rs
services/boardcast/src/: lib.rs  main.rs
services/idgen/: Cargo.toml  Dockerfile  build.rs
services/idgen/src/: lib.rs  main.rs
services/mono/: Directory.Build.props  Dockerfile
services/otel/: Cargo.toml
services/scheduler/: Cargo.toml  Dockerfile  build.rs
services/scheduler/src/: config.rs  main.rs  utils.rs
services/scheduler/src/cache/: redis.rs
services/scheduler/src/db/: auth.rs  event.rs  mod.rs  mt4.rs  mt5.rs  partition.rs  rebate.rs  rebate_calc.rs  tenant.rs  trade_rebate.rs
services/scheduler/src/grpc/: idgen_client.rs  mod.rs  mono_client.rs  scheduler_server.rs
services/scheduler/src/jobs/: account_daily.rs  close_trade.rs  crypto.rs  event_trade_handler.rs  mod.rs  partition_maintenance.rs  process_request.rs  rebate.rs  rebate_calc.rs  release_rebate.rs  send_message_handler.rs  trade_handler.rs  trade_monitor.rs
services/scheduler/src/mail/: mod.rs  sender.rs
services/scheduler/src/models/: meta_trade.rs  mod.rs  rebate.rs
services/scheduler/src/nats/: client.rs
services/scheduler/src/report/: account.rs  csv.rs  daily_equity.rs  deposit.rs  equity.rs  mod.rs  rebate.rs  request.rs  sales.rs  trade.rs
services/scheduler/src/storage/: mod.rs  s3.rs
services/tools/: Cargo.toml  Dockerfile
services/tools/src/: main.rs
tests/Bacera.Gateway.Infrastructure.Tests/: AccountTests.cs  ApplicationServiceTests.cs  AuditTests.cs  AwsSendMailTests.cs  AwsStorageTests.cs  Bacera.Gateway.Infrastructure.Tests.csproj  ConfigurationServiceTests.cs  CopyTradeTests.cs  DatabaseMigrateTests.cs  MT4ServiceTests.cs  MT5DatabaseContextTests.cs  MT5ServiceTests.cs  MeiliSearchTests.cs  ReportServiceTests.cs  SendEmailServiceTests.cs  SharedTestFixture.cs  SharedTestTradingFixture.cs  Startup.cs  SymbolTests.cs  TenantServiceTests.cs  TopicServiceTests.cs  TradeApiServiceTests.cs  TradingRebateTests.cs  TradingServiceTests.cs  TwilioSmsTests.cs  (+2 more)
(+3338 files in other folders)
