[workspace]
members = [
  "services/idgen",
  "services/auth",
]
resolver = "1"

# 统一依赖版本
[workspace.dependencies]
# gRPC / Tonic
tonic = { version = "0.11", features = ["gzip", "transport"] }
tonic-reflection = "0.11"
tonic-build = { version = "0.11", features = ["prost"] }
prost = "0.12"
# Async runtime & web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Utils
snowflaked = "0.1.2"
# Build / HTTP client (e.g. codegen)
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
# Auth / JWT
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
# Crypto (for ASP.NET Identity password verification)
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
harsh = "0.2"
