[package]
name = "auth"
version = "0.1.0"
edition = "2021"
description = "Auth Service - OAuth2 token endpoint, Rust replacement for mono's OpenIddict"

[[bin]]
name = "auth"
path = "src/main.rs"

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hmac = { workspace = true }
data-encoding = "2.6"
base64 = { workspace = true }
harsh = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
otel = { path = "../otel" }
rsa = { version = "0.9.10", features = ["pem"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
md5 = "0.8.0"
hex = "0.4.3"
deadpool-redis = { version = "0.23.0", features = ["rt_tokio_1"] }
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
