[package]
name = "auth-rust"
version = "0.1.0"
edition = "2021"
description = "Auth Service - OAuth2 token endpoint (port of mono's IdentityServer4 logic)"

[[bin]]
name = "auth-rust"
path = "src/main.rs"

[lib]
name = "auth"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
pbkdf2 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
harsh = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
otel = { path = "../otel" }
